2006-05-21  Marco Scholten  <mscholtn@xs4all.nl>

	* src/ui/dialog/inkscape-preferences.cpp, 
      src/ui/dialog/inkscape-preferences.h: 
	  Added 'Show close button on dialogs' option.

2006-05-21  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view-widget.cpp:
	
	  request collection pass after destruction of a view widget

2006-05-21  MenTaLguY  <mental@rydia.net>

	* src/gc-core.h, src/gc.cpp:
	
	  add GC::request_early_collection() to force a collection from the idle
	  loop at opportune times

	* src/dialogs/filedialog.cpp:

	  call GC::request_early_collection() after switching preview images

2006-05-21  Jon A. Cruz  <jon@joncruz.org>

	* src/layer-manager.cpp, src/layer-manager.h,
	  src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
	  Adding notification when managed layers change.

2006-05-21  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/extension/internal/pdf.cpp: Compilation fix.  For versions
	  of glib older that 2.9.0, use g_date_set_time() instead of
	  g_date_set_time_t().

2006-05-20  MenTaLguY  <mental@rydia.net>

	* src/extensin/internal/ps.cpp:

	  add %%EOF trailer for DSC-compliance

2006-05-20  Colin Marquardt  <colin@marquardt-home.de>

	* share/extensions/lindenmayer.inx,
	  share/extensions/kochify_load.inx, 
	  share/extensions/kochify.inx:
	  Rename slightly, also makes for easier translation.

2006-05-20  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/icon.h, src/widgets/icon.cpp, src/dialogs/layers-panel.cpp:
	  Changled dialog from checkboxes to icons for visible and locked.

2006-05-20  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/libnrtype/FontInstance.cpp: patch from David Turner of the
	  FreeType Project.  Fixes a compilation problem and a possible
	  segmentation fault.

2006-05-19  Jon A. Cruz  <jon@joncruz.org>
	* src/preferences-skeleton.h, src/dialogs/layers-panel.h,
	  src/dialogs/layers-panel.cpp:
	  Selection and event handling cleanup. Added deeper display.
